--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/uberDeluxe?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=Martha
-spring.datasource.password=DrDanladi@@2020
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
-
+server.port=9090
+spring.config.import=secrets.properties
